<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".ac_cadastro">

    <TextView
        android:id="@+id/txt_nomeUsuario"
        android:layout_width="356dp"
        android:layout_height="38dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:gravity="center_horizontal"
        android:text="@string/escolherUsuario"
        android:textAlignment="center"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_alterarDepois"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/alterarDepois"
        app:layout_constraintEnd_toEndOf="@+id/txt_nomeUsuario"
        app:layout_constraintStart_toStartOf="@+id/txt_nomeUsuario"
        app:layout_constraintTop_toBottomOf="@+id/txt_nomeUsuario" />

    <EditText
        android:id="@+id/edit_nomeUsuario"
        android:layout_width="349dp"
        android:layout_height="49dp"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/nomeUsuario"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/txt_nomeUsuario"
        app:layout_constraintStart_toStartOf="@+id/txt_nomeUsuario"
        app:layout_constraintTop_toBottomOf="@+id/txt_alterarDepois" />

    <Button
        android:id="@+id/btn_avancar"
        android:background="#3897f0"
        android:layout_width="346dp"
        android:layout_height="46dp"
        android:layout_marginTop="5dp"
        android:text="@string/avancçar"
        app:layout_constraintEnd_toEndOf="@+id/edit_nomeUsuario"
        app:layout_constraintStart_toStartOf="@+id/edit_nomeUsuario"
        app:layout_constraintTop_toBottomOf="@+id/edit_nomeUsuario" />

</androidx.constraintlayout.widget.ConstraintLayout>