<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ac_doacao_efetuada">


    <Button
        android:id="@+id/btn_fechar"
        android:layout_width="27dp"
        android:layout_height="26dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/ic_baseline_arrow_back_24"
        app:layout_constraintBottom_toTopOf="@+id/txt_obrigado"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.04"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.26" />

    <TextView
        android:id="@+id/txt_obrigado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:text="@string/obrigado_pela_doa_o"
        android:textSize="25sp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/txt_melhorar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/juntos_vamos_melhorar_a_nossa_comunidade"
        app:layout_constraintEnd_toEndOf="@+id/txt_obrigado"
        app:layout_constraintStart_toStartOf="@+id/txt_obrigado"
        app:layout_constraintTop_toBottomOf="@+id/txt_obrigado" />

    <TextView
        android:id="@+id/txt_ticket"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:gravity="center"
        android:text="@string/anote_o_seu_ticket"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="@+id/txt_obrigado"
        app:layout_constraintStart_toStartOf="@+id/txt_obrigado"
        app:layout_constraintTop_toBottomOf="@+id/txt_melhorar" />

    <TextView
        android:id="@+id/txt_numTicket"
        android:layout_width="295dp"
        android:layout_height="72dp"
        android:layout_marginTop="8dp"
        android:background="#b8b8b8"
        android:gravity="center"
        android:shadowColor="@color/darkergray"
        android:shadowRadius="10"
        android:text="@string/_0"
        android:textColor="#ffffff"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="@+id/txt_ticket"
        app:layout_constraintStart_toStartOf="@+id/txt_ticket"
        app:layout_constraintTop_toBottomOf="@+id/txt_ticket" />

    <TextView
        android:id="@+id/txt_ticktajuda"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/o_ticket_ajuda_a_identificar_o_pedido_no_sistema_para_facilitar_anote_o_n_do_ticket_e_apresente_na_entrega_do_produto"
        app:layout_constraintEnd_toEndOf="@+id/txt_numTicket"
        app:layout_constraintStart_toStartOf="@+id/txt_numTicket"
        app:layout_constraintTop_toBottomOf="@+id/txt_numTicket" />

</androidx.constraintlayout.widget.ConstraintLayout>