<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".ac_cadastro_email">

    <TextView
        android:id="@+id/txt_senha"
        android:layout_width="0dp"
        android:layout_height="38dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:gravity="center_horizontal"
        android:text="@string/adicionaremail1"
        android:textAlignment="center"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_email"
        android:layout_width="349dp"
        android:layout_height="49dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/txt_senha"
        app:layout_constraintStart_toStartOf="@+id/txt_senha"
        app:layout_constraintTop_toBottomOf="@+id/txt_senha"
        android:autofillHints="" />

    <Button
        android:id="@+id/btn_avancar"
        android:layout_width="346dp"
        android:layout_height="46dp"
        android:layout_marginTop="5dp"
        android:background="#3897f0"
        android:text="@string/avancçar"
        app:layout_constraintEnd_toEndOf="@+id/edit_email"
        app:layout_constraintStart_toStartOf="@+id/edit_email"
        app:layout_constraintTop_toBottomOf="@+id/edit_email" />


</androidx.constraintlayout.widget.ConstraintLayout>